--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@neo9/cordova-honeywell-scanner",
+  "name": "cordova-plugin-honeywell-aidc-scanner",
   "version": "1.1.0",
   "description": "Honeywell TC50/D75E Barcode Scanner and external device using the com.honeywell.aidc SDK",
   "main": "index.js",
